Add Support for communication to docker hosts using UNIX domain sockets:
  * Use jnr-unixsocket for native OS-level access
  * Use a pseudo socket class that mimics a Java network socket and delegates to the jnr channel where applicable
  * Provide a special ApacheUnixSocketHttpDelegate that enables the Apache HTTP client to use that pseudo socket for HTTP communication